# web-app-template

./: README.md  docker-compose.yaml  pyproject.toml
