[tool.poetry]
name = "template"
version = "1.0.0"
description = "A set of template files for Supabase, Poetry, and ReactPy projects."
authors = ["Ryan Partridge"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
supabase = "^1.0.3"
reactpy = "^1.0.2"
gunicorn = "^21.2.0"
flask = "^2.3.2"
flask-cors = "^4.0.0"
flask-sock = "^0.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
